PyTorch; Ch1; define optimizer

--- a/PyTorch/PyTorch_Computer_Vision_CookBook.ipynb
+++ b/PyTorch/PyTorch_Computer_Vision_CookBook.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -175,112 +175,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ../../Datasets/PyTorch/MNIST/raw/train-images-idx3-ubyte.gz\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "5010f015d956489ab3a8f21244f63c2a",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "  0%|          | 0/9912422 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Extracting ../../Datasets/PyTorch/MNIST/raw/train-images-idx3-ubyte.gz to ../../Datasets/PyTorch/MNIST/raw\n",
-            "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ../../Datasets/PyTorch/MNIST/raw/train-labels-idx1-ubyte.gz\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "e878186c24784454af2aacdb1a1c0520",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "  0%|          | 0/28881 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Extracting ../../Datasets/PyTorch/MNIST/raw/train-labels-idx1-ubyte.gz to ../../Datasets/PyTorch/MNIST/raw\n",
-            "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ../../Datasets/PyTorch/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "7ee0971122c94fe9851310910c1d74dc",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "  0%|          | 0/1648877 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Extracting ../../Datasets/PyTorch/MNIST/raw/t10k-images-idx3-ubyte.gz to ../../Datasets/PyTorch/MNIST/raw\n",
-            "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ../../Datasets/PyTorch/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "cf57ad3a23654897a1126247b76d326e",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "  0%|          | 0/4542 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Extracting ../../Datasets/PyTorch/MNIST/raw/t10k-labels-idx1-ubyte.gz to ../../Datasets/PyTorch/MNIST/raw\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# path to store data\n",
         "path2data = '../../Datasets/PyTorch'\n",
@@ -289,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -310,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -320,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -342,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -367,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -381,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -422,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -439,16 +336,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fda924d2590>"
+              "<matplotlib.image.AxesImage at 0x7f7ee9f930d0>"
             ]
           },
-          "execution_count": 68,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -488,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -518,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -551,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -586,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -620,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -663,7 +560,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -680,7 +577,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "cpu\n"
+          ]
+        }
+      ],
+      "source": [
+        "device = torch.device(\"cpu\")\n",
+        "model.to(device)\n",
+        "print(next(model.parameters()).device)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -710,6 +626,80 @@
       "source": [
         "from torchsummary import summary\n",
         "summary(model, input_size=(1,28,28))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Define loss function"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from torch import nn\n",
+        "loss_func = nn.NLLLoss(reduction=\"sum\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "125.74754333496094\n"
+          ]
+        }
+      ],
+      "source": [
+        "# test loss function on a mini-batch\n",
+        "for xb, yb in train_dl:\n",
+        "    xb = xb.type(torch.float)\n",
+        "    # get model output\n",
+        "    out = model(xb)\n",
+        "    # calculate loss\n",
+        "    loss = loss_func(out, yb)\n",
+        "    print(loss.item())\n",
+        "    break"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "loss.backward()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Define optimier"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from torch import optim\n",
+        "opt = optim.Adam(model.parameters(), lr=1e-4)\n",
+        "\n",
+        "# update model parameters\n",
+        "opt.step()\n",
+        "\n",
+        "# set gradients to zeto\n",
+        "opt.zero_grad()"
       ]
     },
     {
