--- a/UNL/Linear_Regression/LR_Closed_Form.ipynb
+++ b/UNL/Linear_Regression/LR_Closed_Form.ipynb
@@ -67,6 +67,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y:  [45 38 36 23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = np.array([5,6,1])\n",
+    "X = np.array([[1,5,10],\n",
+    "              [1,4,9],\n",
+    "              [1,3,13],\n",
+    "              [1,2,6]\n",
+    "              ])\n",
+    "\n",
+    "y = X.dot(w)\n",
+    "print(\"y: \", y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X: \n",
+      " [[13 22 35]\n",
+      " [17 13  9]\n",
+      " [ 7  3 12]\n",
+      " [ 1 31  1]]\n",
+      "y: \n",
+      " [[22]\n",
+      " [34]\n",
+      " [45]\n",
+      " [67]]\n",
+      "\n",
+      "Calculated w: \n",
+      " [[63.96483756]\n",
+      " [-1.49554279]\n",
+      " [ 0.1703645 ]\n",
+      " [-0.75059429]]\n",
+      "\n",
+      " ----------------Model Evaluation---------------------\n",
+      "Mean Squared Error: 0.00\n",
+      "Coefficient of Determination r^2 variance score: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Linear Regression: Square data matrix\n",
+    "X = np.array([[13, 22, 35],\n",
+    "              [17,13,9],\n",
+    "              [7, 3, 12],\n",
+    "              [1, 31, 1]\n",
+    "              ])\n",
+    "\n",
+    "X_bias = np.c_[np.ones((X.shape[0], 1)), X]\n",
+    "\n",
+    "y = np.array([22, 34, 45, 67]).reshape(-1,1)\n",
+    "\n",
+    "w =np.linalg.inv(X_bias).dot(y)\n",
+    "\n",
+    "print(\"X: \\n\", X)\n",
+    "print(\"y: \\n\", y)\n",
+    "\n",
+    "print(\"\\nCalculated w: \\n\",w)\n",
+    "\n",
+    "print(\"\\n ----------------Model Evaluation---------------------\")\n",
+    "y_predicred = X_bias.dot(w)\n",
+    "\n",
+    "print(\"Mean Squared Error: %.2f\"%mean_squared_error(y, y_predicred))\n",
+    "print(\"Coefficient of Determination r^2 variance score: %.f\"%r2_score(y, y_predicred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
