--- a/UNL/Linear_Regression/LR_Closed_Form.ipynb
+++ b/UNL/Linear_Regression/LR_Closed_Form.ipynb
@@ -91,6 +91,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear Regression: Square data matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -149,11 +156,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Data Matrix X is Non-Square"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rank of X: 2\n",
+      "\n",
+      "Rank of X_bias:  2\n",
+      "\n",
+      "Rank of z:  2\n",
+      "\n",
+      "Weight vector: \n",
+      " [[ 1.3400000e+02]\n",
+      " [ 6.2500000e-02]\n",
+      " [-4.1640625e+00]\n",
+      " [ 5.9375000e-01]]\n",
+      "\n",
+      " ----------------Model Evaluation---------------------\n",
+      "Mean Squared Error: 2247.60\n",
+      "Coefficient of Determination r^2 variance score: -61\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Non-Square X: No collinearity\n",
+    "\n",
+    "X = np.array([[13, 22, 35],\n",
+    "              [17, 13, 9]\n",
+    "              ])\n",
+    "\n",
+    "y = np.array([22, 34]).reshape(-1,1)\n",
+    "\n",
+    "print(\"Rank of X:\", matrix_rank(X))\n",
+    "\n",
+    "X_bias = np.c_[np.ones((X.shape[0],1)), X]\n",
+    "\n",
+    "print(\"\\nRank of X_bias: \", matrix_rank(X_bias))\n",
+    "\n",
+    "z = X_bias.T.dot(X_bias)\n",
+    "\n",
+    "print(\"\\nRank of z: \", matrix_rank(z))\n",
+    "\n",
+    "w = np.linalg.inv(z).dot(X_bias.T).dot(y)\n",
+    "print(\"\\nWeight vector: \\n\", w)\n",
+    "\n",
+    "\n",
+    "print(\"\\n ----------------Model Evaluation---------------------\")\n",
+    "y_predicred = X_bias.dot(w)\n",
+    "\n",
+    "print(\"Mean Squared Error: %.2f\"%mean_squared_error(y, y_predicred))\n",
+    "print(\"Coefficient of Determination r^2 variance score: %.f\"%r2_score(y, y_predicred))\n"
+   ]
   },
   {
    "cell_type": "code",
