OLS; data matrix woti collinearity

--- a/UNL/Linear_Regression/LR_Closed_Form.ipynb
+++ b/UNL/Linear_Regression/LR_Closed_Form.ipynb
@@ -397,6 +397,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OLS on Data Matrix with Collinearity in Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The weight vector: \n",
+      " [0.10522057 0.83835579 1.67671159 0.5058005 ]\n",
+      "\n",
+      "---------------------Model Evaluation-------------------\n",
+      "Mean squared Error:  0.00\n",
+      "Coefficient of determination r^2 variance score:  1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.array([[1,2,35],\n",
+    "              [7,14,9]])\n",
+    "\n",
+    "y = np.array([22,34])\n",
+    "\n",
+    "X_bias = np.c_[np.ones((X.shape[0], 1)), X]\n",
+    "\n",
+    "Z = X_bias.T.dot(X_bias)\n",
+    "\n",
+    "diagonal = np.eye(Z.shape[0], dtype=float)\n",
+    "diagonal = diagonal * 0.001\n",
+    "\n",
+    "w = np.linalg.inv(Z+diagonal).dot(X_bias.T).dot(y)\n",
+    "print(\"The weight vector: \\n\", w)\n",
+    "\n",
+    "\n",
+    "print(\"\\n---------------------Model Evaluation-------------------\")\n",
+    "y_predicred = X_bias.dot(w)\n",
+    "\n",
+    "print(\"Mean squared Error: {:5.2f}\".format(mean_squared_error(y, y_predicred)))\n",
+    "print(\"Coefficient of determination r^2 variance score: {:5.2f}\".format(r2_score(y, y_predicred)))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
